p2/confs/app2/app2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 3
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app3
          image: danipe1970/app2:latest
          ports:
           - containerPort: 80
