p2/confs/app2/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      #targetport: 80
  selector:
    app: app2
