p2/confs/app2/app2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app2.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app2-service
              port:
                number: 80
